Fixes #432 and research rows of grids not showing in i.e.

--- a/src/components/common/grid/grid.less
+++ b/src/components/common/grid/grid.less
@@ -8,13 +8,13 @@ grid-component {
   display: flex;
   width: 100%;
   flex-direction: column;
-  flex: 1;
+  flex: 1 1 auto; // "auto" needs to be explicit to avoid the div collapsing to "height:0" on ie.
 
   .grid-responsive {
     display: flex;
     width: 100%;
     flex-direction: column;
-    flex: 1;
+    flex: 1 1 auto;
   }
 
   // Bootstrap Overwrites
